--- a/index.html
+++ b/index.html
@@ -289,6 +289,26 @@ canvas{
     margin-bottom:0.1px !important;  
 }
 
+/* ===== 横画面 天気2カラム化 ===== */
+#page_weather .panel{
+  display:flex;
+  gap:20px;
+}
+
+#weatherToday{
+  flex:1;
+}
+
+#weatherWeekly{
+  flex:1;
+  margin-top:0 !important;
+  border-top:none !important;
+  padding-top:0 !important;
+}
+
+
+
+
 }
 </style>
 </head>
