--- a/index.html
+++ b/index.html
@@ -913,13 +913,7 @@ function drawChart(){
    window.matchMedia("(orientation: landscape)").matches;
 
  /* ===== 横画面最適化 ===== */
- const paddingLeft  = isLandscape ? 80 : 60;   // ← 横だけ広く
-const paddingRight = isLandscape ? 30 : 60;
-const paddingTop   = isLandscape ? 30 : 60;
-const paddingBottom= isLandscape ? 30 : 60;
-
-const w = rect.width - paddingLeft - paddingRight;
-const totalHeight = rect.height - paddingTop - paddingBottom;
+const padding = isLandscape ? 30 : 60;
 
  const w = rect.width - padding*2;
  const totalHeight = rect.height - padding*2;
@@ -949,7 +943,7 @@ const totalHeight = rect.height - paddingTop - paddingBottom;
   ctx.lineTo(rect.width-padding,y);
   ctx.stroke();
 
-  ctx.fillText(val.toFixed(0),10,y+3);
+  ctx.fillText(val.toFixed(0),1,y+3);
  }
 
  const gap = w/(chartData.length-1);
@@ -1048,7 +1042,7 @@ const fullHeight = rect.height - padding*2;
 const isLandscape =
   window.matchMedia("(orientation: landscape)").matches;
 
-const h = fullHeight * (isLandscape ? 1.5 : 1);
+const h = fullHeight * (isLandscape ? 1.75 : 1);
 
 const yOffset = isLandscape ? -(h - fullHeight) * 0.5 : 0;
 
