--- a/index.html
+++ b/index.html
@@ -730,15 +730,7 @@ async function loadStock(){
     result.indicators.quote[0].volume;
 
 /* ===== 表示日数を条件分岐 ===== */
-const isPortrait =
-  window.matchMedia("(orientation: portrait)").matches;
-
-const isIphone =
-  /iPhone/.test(navigator.userAgent);
-
-// iPhoneの縦画面だけ7日、それ以外は20日
-const displayDays =
-  (isPortrait && isIphone) ? 7 : 20;
+const displayDays = 20;
 
 const filtered = rawPrices
   .map((p,i)=>({
