--- a/index.html
+++ b/index.html
@@ -730,7 +730,18 @@ async function loadStock(){
     result.indicators.quote[0].volume;
 
 /* ===== 表示日数を条件分岐 ===== */
-const displayDays = 20;
+/* ===== 表示日数を条件分岐（安定版） ===== */
+
+const isIphone =
+  /iPhone/.test(navigator.userAgent);
+
+// 画面の縦横を実寸で判定（matchMediaより安定）
+const isPortrait =
+  window.innerHeight > window.innerWidth;
+
+// iPhoneかつ縦のときだけ7日
+const displayDays =
+  (isIphone && isPortrait) ? 7 : 20;
 
 const filtered = rawPrices
   .map((p,i)=>({
