--- a/index.html
+++ b/index.html
@@ -312,7 +312,9 @@ canvas{
   padding-top:0 !important;
 }
 
-
+  #bootdate{
+    top:57%;   /* ← 50% → 55% に下げる */
+}
 
 
 }
@@ -506,7 +508,7 @@ setInterval(()=>{
    drawChart();
  }
 
-},7000);
+},70000);
 
 /* ===== ティッカー ===== */
 let tickerFX="",tickerStock="",tickerNews="";
